# yoshiko

./: CMakeLists.txt  README.md
data/test/: Debug.jena  graph.jena
george/: CMakeLists.txt  README.md  script.txt
george/src/: GraphGenerator.cpp  GraphGenerator.h  main.cpp
src/: ClusterEditingSolutions.cpp  ClusterEditingSolutions.h  CoreAlgorithm.cpp  CoreAlgorithm.h  ILPSolver.cpp  ILPSolver.h  YParameterSet.h  main.cpp
